@@ -1,3 +1,7 @@
+2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/Conversation.cs: added new properties, events and methods 
+
 2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/Application.cs: Fixed lagging references to VideoWindow
